--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
-    "jsdom": "^21.1.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "sse": "github:mpetazzoni/sse.js"
   },
